styles/style.less
@import "variables";
@import "utilities";
@import "nav";

* {
  box-sizing: border-box;
}

body {
  font: 14pt/1.5 Open Sans, sans-serif;
}

a {
  color: @very-blue;
}

h1,
h2 {
  &::after {
    position: relative;
    display: block;
    height: @pu / 4;
    width: 100%;
    margin-top: @pu;
    margin-bottom: @pu;
    background-color: @rf-light-blue;
    content: "";
  }
}
.social-links__header::after {
  display: none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: @fh;
  margin-top: @pu * 8;
  margin-bottom: @pu2;
  line-height: 1.25;
  & .header-anchor {
    display: block;
    position: relative;
    top: -50px;
    visibility: hidden;
  }
  & .header-anchor-select {
    visibility: hidden;
    padding-left: @pu;
    text-decoration: none;
    color: #ccc;
  }

  &:hover .header-anchor-select {
    visibility: visible;
  }
}

.post-block-wrap {
  display: flex;
  flex-wrap: wrap;
  align-content: center;
}

.post-block {
  width: 50%;
  min-width: 15em;
  padding: @pu * 3;
  & h2 {
    margin-top: @pu * 4;
  }
  & h3,
  h4 {
    margin-top: @pu * 3;
  }
}

.post-block-full {
  width: 100%;
}

blockquote {
  padding: @pu2;
  margin: @pu * 3;
  border: 1px solid #dae4e9;
  font-size: smaller;

  p:last-child {
    margin: 0;
  }

  &.tip {
    color: #696969;
    background-color: #f5fffb;
  }

  &.warning {
    color: #696969;
    font-size: medium;
    background-color: #fffffa;
  }
}

.photo {
  float: right;
  margin-left: @pu * 3;
  margin-bottom: @pu * 3;
  border-radius: 100%;
}

dl {
  margin: 0 @pu2;
}

dt {
  font-weight: bold;
}

dd {
  margin-left: @pu2;
  margin-bottom: @pu2 * 3;
  border-left: solid @pu / 2 black;
  padding-left: @pu2;
}
dd {
  h3 {
    margin-top: 0;
    margin-bottom: 0;
  }
  p {
    margin-top: 0;
    margin-bottom: @pu2;
  }
}

body {
  background-color: #0b0b0d;
}
.main-container {
  background-color: white;
  padding: @pu * 8;
  margin-top: 0;
  margin-bottom: 1em;
  border-bottom-right-radius: 1em;
  border-bottom-left-radius: 1em;
}

header {
  color: #f3f7f9;
  background: url("../assets/img/headers/front.jpg");
  margin-top: @pu * 6;
  font-family: @fh;
  padding: @pu2;
  text-align: center;
  .rubric {
    text-transform: uppercase;
    font-size: xx-large;
    font-weight: bold;
    padding: @pu2 0;
  }
  .container {
    padding: @pu * 8 0;
    margin: auto;
  }
  h1 {
    padding: @pu * 4 0;
    padding-top: 0;
    color: @rf-blue;
    font-weight: normal;
  }
  h3 {
    font-weight: 400;
    padding: @pu2 0;
    padding-top: 0;
  }
}

.content-block {
  .clearfix();
  margin-bottom: @pu2 * 4;
}

.react-image {
  margin: @pu;
  width: 100px;
  height: 100px;
  float: right;
}

.social-links__header {
  margin-top: 0;
  text-align: center;
}

.social-links__tip {
  margin-top: 0.5em;
}

.social-form__wrapper {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.social-form__input-container {
  flex-grow: 1;
}

.social-form__input,
.social-form__subscribe {
  border: solid @pu / 2 @rf-deep-blue;
}

.social-form__input {
  display: block;
  width: 100%;
  line-height: 2em;
  border-top-left-radius: @pu2 * 2;
  border-bottom-left-radius: @pu2 * 2;
  padding-left: @pu;
  border-right: none;
}
.social-form__subscribe-container input {
  border-top-right-radius: @pu2 * 2;
  border-bottom-right-radius: @pu2 * 2;
}

.social-form__subscribe {
  line-height: 2em;
  background-color: @rf-blue;
  border-left: none;
  padding-left: @pu2 * 2;
  padding-right: @pu2 * 2;
}

.social-form__subscribe:hover {
  background-color: @rf-deep-blue;
  cursor: pointer;
}

.flex {
  display: flex;
}

.contact {
  margin-bottom: @pu2;

  .country {
    display: inline;
    margin-left: @pu2;

    span {
      outline: solid 1px rgba(0, 0, 0, 0.1);
    }
  }

  .social {
    display: inline;
    float: right;
  }
}
.speaker-names {
  display: inline;
}

.session {
  margin-top: @pu2;
  margin-bottom: @pu2;
}

.keywords {
  font-size: smaller;
  margin-top: @pu;
  margin-bottom: @pu;
}

.keyword {
  background-color: @rf-deep-blue;
  color: white;
  display: inline;
  margin: @pu;
  padding: @pu;
  border-radius: @pu;
}
.keyword:first-child {
  margin-left: 0;
}

.contact-mini {
  width: 100px;
  margin: @pu * 5;
  text-align: center;
  display: inline-block;
  vertical-align: top;
}

.organizers {
  .contact {
    display: inline-block;
    width: 100%;
  }
}

.speakers-mini {
  text-align: center;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  .contact-mini {
    width: 100px;
    text-align: center;
    display: inline-block;
    vertical-align: top;
    width: 100px;
    margin: 0.5rem;
    @media screen and (min-width: 480px) {
      margin: 1.5rem; // or 2.5
    }
  }
}

@media (max-width: @mobile-breakpoint) {
  header {
    .rubric,
    h1,
    h3 {
      padding: 0;
    }
  }
  .logo {
    margin-top: 5em;
  }
  .nav__link,
  .nav__selected__link {
    letter-spacing: 0;
  }
  .post-block {
    min-width: 100%;
  }
  .container {
    max-width: 100%;
  }
}

.buy {
  margin: @pu * 6;
}

.buy-button {
  text-transform: uppercase;
  letter-spacing: 0.05em;
  -webkit-appearance: none;
  -webkit-appearance: normal;
  outline: none;
  background-color: transparent;
  padding: @pu * 3;
  border-radius: 100px;
  background-color: white;
  border: @pu @rf-blue solid;
  color: darken(@rf-blue, 30%);
  &:hover {
    background-color: @rf-blue;
  }
}

.speaker-photos {
  display: inline;
}

.partners .contact-mini-logo {
  border-radius: 0;
}

th,
td {
  padding: @pu2;
}

